# maya-ai

./: .gitignore  README.md  claude_proof.txt  package.json  proof.py  scaffold.py  search.js  start.bat  start.sh  stop.bat  test_encoding.txt
backend/: check_models.py  main.py  requirements.txt  run.py  test_models.py
backend/api/: main.py  telegram_bot.py
backend/api/routes/: settings.py
backend/api/websocket/: handlers.py  manager.py
backend/brain/: orchestrator.py  security_filter.py
backend/brain/agents/: agent_defs.py  agent_team.py
backend/brain/gemini/: function_calls.py
backend/brain/memory/: long_term_memory.py
backend/brain/personality/: emotions.py  maya_personality.py
backend/brain/providers/: base.py  gemini_adapter.py
backend/brain/reasoning/: tool_planner.py
backend/database/: connection.py  crypto.py  migrations.py  models.py  recovery.py
backend/scripts/: reencrypt_wizard.py
backend/skills/: loader.py  scanner.py
backend/system/: event_bus.py  scheduler.py  shutdown_manager.py  state_manager.py
backend/tests/: test_agents.py  test_audit_logger.py  test_crypto.py  test_function_calls.py  test_plugin_security.py  test_recovery.py  test_reencrypt_wizard.py  test_security_filter.py
backend/tools/desktop/: app_context.py  apps.py  (+3 more)
backend/utils/: audit_logger.py
backend/voice/: manager.py
docs/: automation.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: download_models.py  start_voice.js  verify_cuda.py
(+44 files in other folders)
